removed many warnings